--- a/YjyMoreFunctions/app/src/main/res/layout/activity_base.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_base.xml
@@ -4,6 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <com.improve.utility.views.TitleView
+        android:id="@+id/base_title_view"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_48"/>
+
     <FrameLayout
         android:id="@+id/base_container"
         android:layout_width="match_parent"
