--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,10 @@
             android:layout_height="wrap_content"
             android:text="upanddown"
             android:id="@+id/btn_upanddown"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="loader_image"
+            android:id="@+id/btn_loader_image"/>
     </LinearLayout>
 </ScrollView>
