--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,11 @@
             android:layout_height="wrap_content"
             android:text="storage_in_app"
             android:id="@+id/btn_storage_in_app"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="rxjava_android"
+            android:id="@+id/btn_rxjava_android"/>
     </LinearLayout>
 
 </ScrollView>
