--- a/YjyMoreFunctions/app./src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app./src/main/res/layout/activity_main.xml
@@ -51,7 +51,11 @@
             android:layout_height="wrap_content"
             android:text="rxjava_android"
             android:id="@+id/btn_rxjava_android"/>
-
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="greendao"
+            android:id="@+id/btn_greendao"/>
 
     </LinearLayout>
 
