--- a/YjyMoreFunctions/app./src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app./src/main/res/layout/activity_main.xml
@@ -61,6 +61,11 @@
             android:layout_height="wrap_content"
             android:text="尺子"
             android:id="@+id/btn_ruler"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="5.0 滑动效果"
+            android:id="@+id/btn_behaviour"/>
     </LinearLayout>
 
 </ScrollView>
