--- a/YjyMoreFunctions/app./src/main/res/layout/activity_image.xml
+++ b/YjyMoreFunctions/app./src/main/res/layout/activity_image.xml
@@ -10,4 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="10dp"
+        android:layout_marginTop="50dp"/>
+
 </LinearLayout>
