--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,18 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="渐变色"
+            android:text="闪光文字"
             android:id="@+id/btn_gradient"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="时光轴"
             android:id="@+id/btn_sgz"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="线程池"
+            android:id="@+id/btn_thread_pool"/>
     </LinearLayout>
 
 </ScrollView>
