--- a/YjyMoreFunctions/app./src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app./src/main/res/layout/activity_main.xml
@@ -86,6 +86,11 @@
             android:layout_height="wrap_content"
             android:text="DialogFragment创建对话框"
             android:id="@+id/btn_dialog_fragment"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scroller回弹效果"
+            android:id="@+id/btn_sroller"/>
     </LinearLayout>
 
 </ScrollView>
