--- a/YjyMoreFunctions/app/src/main/res/layout/activity_scroller.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_scroller.xml
@@ -21,5 +21,9 @@
             android:layout_centerInParent="true"
             android:layout_height="wrap_content"
             android:src="@drawable/pic_teacher"/>
+
+        <com.yjymorefunctions.views.LineKindsView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </com.yjymorefunctions.views.BounceView>
 </LinearLayout>
