--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,11 @@
             android:layout_height="wrap_content"
             android:text="替换ICONTemp"
             android:id="@+id/btn_replace_icon_temp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="画draw2"
+            android:id="@+id/btn_draw2"/>
     </LinearLayout>
 
 </ScrollView>
