--- a/YjyMoreFunctions/app/src/main/res/values/ids.xml
+++ b/YjyMoreFunctions/app/src/main/res/values/ids.xml
@@ -3,4 +3,9 @@
 
     <item name="fgelv_tag_changed_visibility" type="id"/>
 
+
+    <item name="swipe_target" type="id" />
+    <item name="swipe_refresh_header" type="id" />
+    <item name="swipe_load_more_footer" type="id" />
+
 </resources>
