--- a/YjyMoreFunctions/app/src/main/res/layout/activity_draw.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_draw.xml
@@ -6,6 +6,7 @@
 
 
     <com.yjymorefunctions.views.CustomView
+        android:id="@+id/custom_view"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
