--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,11 @@
             android:layout_height="wrap_content"
             android:text="测试webview监听h5输入框内容"
             android:id="@+id/btn_webview"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="画draw3"
+            android:id="@+id/btn_draw3"/>
     </LinearLayout>
 
 </ScrollView>
