--- a/YjyMoreFunctions/app/src/main/res/values/colors.xml
+++ b/YjyMoreFunctions/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="color_cbff00">#cbff00</color>
     <color name="color_00fcfb">#00fcfb</color>
     <color name="color_00000000">#00000000</color>
+    <color name="color_00000001">#00000001</color>
 </resources>
