--- a/YjyMoreFunctions/app/src/main/res/layout/activity_coordinator.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_coordinator.xml
@@ -40,7 +40,7 @@
 
 
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 android:lineSpacingExtra="5dp"
                 android:text="@string/text"/>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 
 
