--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -154,8 +154,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="btn_behaviour3"
-            android:id="@+id/btn_behaviour3"/>
+            android:text="btn_pathmeasure"
+            android:id="@+id/btn_pathmeasure"/>
     </LinearLayout>
 
 </ScrollView>
