--- a/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
+++ b/YjyMoreFunctions/app/src/main/res/layout/activity_main.xml
@@ -156,6 +156,11 @@
             android:layout_height="wrap_content"
             android:text="btn_pathmeasure"
             android:id="@+id/btn_pathmeasure"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="btn_kotlin"
+            android:id="@+id/btn_dagger2"/>
     </LinearLayout>
 
 </ScrollView>
